common-applications/freesky-icsl-hk-cluster/om-webserver/om-webserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "20"
  name: om-webserver-ingress
  namespace: om-webserver
spec:
  tls:
    - hosts:
        - omapi.myopeninfra.com
      secretName: tls-secrets
  rules:
    - host: omapi.myopeninfra.com
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /
